Fix image caption alignment

--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,6 @@
 /* css styles */
+
+.figure {
+    margin: auto;
+    text-align: center;
+}
